fix hbar on smaller widths

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -217,12 +217,8 @@ hr {
 
 .highlight {
   font-weight: bold;
-  text-shadow:
-  0 0 5px  #90f1fe,
-  0 0 10px #90f1fe,
-  0 0 20px #90f1fe,
-  0 0 40px #90f1fe;
-
+  text-shadow: 0 0 5px #90f1fe, 0 0 10px #90f1fe, 0 0 20px #90f1fe,
+    0 0 40px #90f1fe;
 }
 
 .left {
@@ -269,6 +265,12 @@ hr {
 
 @media (max-width: 980px) {
   .opt-hide {
+    display: none;
+  }
+}
+
+@media (max-width: 409px) {
+  .opt-hide2 {
     display: none;
   }
 }
